syntax = "proto3";

package product;

option go_package = "github.com/ecom-monorep/product-service/internal/server/grpc";

service ProductService{
    rpc GetProductById(ProductRequest) returns (ProductResponse);
}

message ProductRequest {
  string product_id = 1;
}


message ProductResponse{
  string product_id=1;
  string product_name=2;

}